--- a/local.properties
+++ b/local.properties
@@ -7,5 +7,5 @@
 # Location of the SDK. This is only used by Gradle.
 # For customization when using a Version Control System, please read the
 # header note.
-#Fri Nov 17 14:53:07 CET 2017
-sdk.dir=C\:\\Users\\kodiak\\AppData\\Local\\Android\\Sdk
+#Sat Nov 18 22:16:53 CET 2017
+sdk.dir=/Users/louisadort/Library/Android/sdk
